tests/lean/isDefEqOffsetBug.lean.expected.out
isDefEqOffsetBug.lean:19:2-19:5: error: type mismatch
  rfl
has type
  0 + 0 = 0 + 0 : Prop
but is expected to have type
  0 + 0 = 0 : Prop
